<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@color/sw_background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="24dp"
        app:tint="@color/sw_red"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/sw_text_primary"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/sw_text_secondary"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:layout_marginBottom="32dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/enter_app"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:letterSpacing="0.1" />
</LinearLayout>